--- a/src/main/webapp/admin/addRecurso.xhtml
+++ b/src/main/webapp/admin/addRecurso.xhtml
@@ -21,7 +21,8 @@
 
 </h:head>
 <h:body >
-    <header class="header">
+    <h:form>
+        <header class="header">
         <nav class="nav">
             <div class="logos">
                 <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
@@ -37,8 +38,16 @@
                     <a onclick="history.back()" class="nav-menu-link nav-link">Atras</a>
                 </li>
 
-                <li class="nav-menu-item">
-                    <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" immediate="true"/>
+                <li class="nav-menu_visible" >
+                    <div>
+                        <i class="fas  icon" style="color: white;"/>
+                    </div>
+                    <p:panelMenu>
+                        <p:submenu label="Sesión" style="width: 165px; ">
+                            <p:menuitem icon="fas fa-user icon" value="#{usuariosBean.getUsuario(loginBean.user).nombre} #{usuariosBean.getUsuario(loginBean.user).apellido} "/>
+                            <p:menuitem icon="fas fa-check-circle icon" value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/misReservasxhtml')}" immediate="true"/>
+                        </p:submenu>
+                    </p:panelMenu>
                 </li>
             </ul>
         </nav>
@@ -46,6 +55,7 @@
             <p:autoUpdate/>
         </p:messages>
     </header>
+    </h:form>
 
     <h:form class="formulario">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
