--- a/src/main/webapp/public/misReservas.xhtml
+++ b/src/main/webapp/public/misReservas.xhtml
@@ -25,46 +25,56 @@
         <p:autoUpdate/>
     </p:messages>
     <header class="header">
-        <nav class="nav">
-            <div class="logos">
-                <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
-                <h1 class="tittleLogo" >Biblioteca</h1>
-                <h1 class="tittleLogo2" >ECI</h1>
-            </div>
+        <h:form>
+            <nav class="nav">
+                <div class="logos">
+                    <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
+                    <h1 class="tittleLogo" >Biblioteca</h1>
+                    <h1 class="tittleLogo2" >ECI</h1>
+                </div>
 
-            <button class="nav-toggle" aria-label="Abrir menú">
-                <i class="fas fa-bars"></i>
-            </button>
+                <button class="nav-toggle" aria-label="Abrir menú">
+                    <i class="fas fa-bars"></i>
+                </button>
 
-            <ul class="nav-menu">
+                <ul class="nav-menu">
 
-                <c:if  test="#{loginBean.isAdmin()}">
+                    <c:if  test="#{loginBean.isAdmin()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/admin/userReservas.xhtml" class="nav-menu-link nav-link">Atras</a>
+                        </li>
+                    </c:if>
+
+                    <c:if  test="#{loginBean.isEstudiante()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/index.xhtml" class="nav-menu-link nav-link">Home</a>
+                        </li>
+                    </c:if>
+
+
                     <li class="nav-menu-item">
-                        <a href="/faces/admin/userReservas.xhtml" class="nav-menu-link nav-link">Atras</a>
+                        <a href="/faces/public/historialcanceladas.xhtml" class="nav-menu-link nav-link" >Canceladas</a>
                     </li>
-                </c:if>
 
-                <c:if  test="#{loginBean.isEstudiante()}">
                     <li class="nav-menu-item">
-                        <a href="/faces/index.xhtml" class="nav-menu-link nav-link">Home</a>
+                        <a href="/faces/public/historialterminadas.xhtml" class="nav-menu-link nav-link">Terminadas</a>
                     </li>
-                </c:if>
 
+                    <li class="nav-menu_visible" >
+                        <div>
+                            <i class="fas  icon" style="color: white;"/>
+                        </div>
+                        <p:panelMenu>
+                            <p:submenu label="Sesión" style="width: 165px; ">
+                                <p:menuitem icon="fas fa-user icon" value="#{usuariosBean.getUsuario(loginBean.user).nombre} #{usuariosBean.getUsuario(loginBean.user).apellido} "/>
+                                <p:menuitem icon="fas fa-check-circle icon" value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/misReservas.xhtml')}" immediate="true"/>
+                            </p:submenu>
+                        </p:panelMenu>
+                    </li>
+                </ul>
+            </nav>
+        </h:form>
 
-                <li class="nav-menu-item">
-                    <a href="/faces/public/historialcanceladas.xhtml" class="nav-menu-link nav-link" >Canceladas</a>
-                </li>
-
-                <li class="nav-menu-item">
-                    <a href="/faces/public/historialterminadas.xhtml" class="nav-menu-link nav-link">Terminadas</a>
-                </li>
-
-                <li class="nav-menu-item">
-                    <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" />
-                </li>
-
-            </ul>
-        </nav>
     </header>
 
     <div class="container h-100">
