--- a/src/main/webapp/public/recursoLibros.xhtml
+++ b/src/main/webapp/public/recursoLibros.xhtml
@@ -22,47 +22,65 @@
 </h:head>
 <h:body >
     <header class="header">
-        <nav class="nav">
+        <h:form>
+            <nav class="nav">
 
-            <div class="logos">
-                <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
-                <h1 class="tittleLogo" >Biblioteca ECI</h1>
-            </div>
+                <div class="logos">
+                    <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
+                    <h1 class="tittleLogo" >Biblioteca ECI</h1>
+                </div>
 
-            <ul class="nav-menu">
-                <li class="nav-menu-item">
-                    <a href="/faces/index.xhtml" class="nav-menu-link nav-link">Home</a>
-                </li>
-
-                <c:if  test="#{loginBean.isVisitante()}">
+                <ul class="nav-menu">
                     <li class="nav-menu-item">
-                        <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active" action="#{loginBean.setUltimaPagina('/faces/public/recursoLibros.xhtml')}" >Iniciar Sesion</a>
-                    </li>
-                </c:if>
-
-                <c:if  test="#{loginBean.isEstudiante()}">
-                    <li class="nav-menu-item">
-                        <a href="/faces/public/misReservas.xhtml" class="nav-menu-link nav-link">Mis Reservas</a>
+                        <a href="/faces/index.xhtml" class="nav-menu-link nav-link">Home</a>
                     </li>
 
-                    <li class="nav-menu-item">
-                        <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/recursoLibros.xhtml')}"/>
-                    </li>
-                </c:if>
+                    <c:if  test="#{loginBean.isVisitante()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active" action="#{loginBean.setUltimaPagina('/faces/public/recursoLibros.xhtml')}" >Iniciar Sesion</a>
+                        </li>
+                    </c:if>
 
-                <c:if  test="#{loginBean.isAdmin()}">
-                    <li class="nav-menu-item">
-                        <a href="/faces/admin/addRecurso.xhtml" class="nav-menu-link nav-link">Añadir</a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="/faces/admin/deleteLibro.xhtml" class="nav-menu-link nav-link">Eliminar</a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/recursoLibros.xhtml')}"/>
-                    </li>
-                </c:if>
-            </ul>
-        </nav>
+                    <c:if  test="#{loginBean.isEstudiante()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/public/misReservas.xhtml" class="nav-menu-link nav-link">Mis Reservas</a>
+                        </li>
+
+                        <li class="nav-menu_visible" >
+                            <div>
+                                <i class="fas  icon" style="color: white;"/>
+                            </div>
+                            <p:panelMenu>
+                                <p:submenu label="Sesión" style="width: 165px; ">
+                                    <p:menuitem icon="fas fa-user icon" value="#{usuariosBean.getUsuario(loginBean.user).nombre}  #{usuariosBean.getUsuario(loginBean.user).apellido}"/>
+                                    <p:menuitem icon="fas fa-check-circle icon" value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/recursoLibros.xhtml')}" immediate="true"/>
+                                </p:submenu>
+                            </p:panelMenu>
+                        </li>
+                    </c:if>
+
+                    <c:if  test="#{loginBean.isAdmin()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/admin/addRecurso.xhtml" class="nav-menu-link nav-link">Añadir</a>
+                        </li>
+                        <li class="nav-menu-item">
+                            <a href="/faces/admin/deleteLibro.xhtml" class="nav-menu-link nav-link">Eliminar</a>
+                        </li>
+                        <li class="nav-menu_visible" >
+                            <div>
+                                <i class="fas  icon" style="color: white;"/>
+                            </div>
+                            <p:panelMenu>
+                                <p:submenu label="Sesión" style="width: 165px; ">
+                                    <p:menuitem icon="fas fa-user icon" value="#{usuariosBean.getUsuario(loginBean.user).nombre}"/>
+                                    <p:menuitem icon="fas fa-check-circle icon" value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/recursoLibros.xhtml')}" immediate="true"/>
+                                </p:submenu>
+                            </p:panelMenu>
+                        </li>
+                    </c:if>
+                </ul>
+            </nav>
+        </h:form>
     </header>
 
     <p:messages id="messages" showDetail="true" closable="true">
