--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -38,8 +38,16 @@
                     </li>
 
                     <c:if  test="#{!loginBean.isVisitante()}">
-                        <li class="nav-menu-item">
-                            <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/verHorarios.xhtml')}"/>
+                        <li class="nav-menu_visible" >
+                            <div>
+                                <i class="fas  icon" style="color: white;"/>
+                            </div>
+                            <p:panelMenu>
+                                <p:submenu label="Sesión" style="width: 165px; ">
+                                    <p:menuitem icon="fas fa-user icon" value="#{usuariosBean.getUsuario(loginBean.user).nombre}  #{usuariosBean.getUsuario(loginBean.user).apellido}"/>
+                                    <p:menuitem icon="fas fa-check-circle icon" value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/verHorarios.xhtml')}" immediate="true"/>
+                                </p:submenu>
+                            </p:panelMenu>
                         </li>
                     </c:if>
 
