--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -38,8 +38,16 @@
                     </li>
 
                     <c:if  test="#{!loginBean.isVisitante()}">
-                        <li class="nav-menu-item">
-                            <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/verHorarios.xhtml')}"/>
+                        <li class="nav-menu_visible" >
+                            <div>
+                                <i class="fas  icon" style="color: white; width: 20px;"/>
+                            </div>
+                            <p:panelMenu>
+                                <p:submenu label="Sesión" style="width: 165px;">
+                                    <p:menuitem icon="fas fa-user icon" value="#{usuariosBean.getUsuario(loginBean.user).nombre}  #{usuariosBean.getUsuario(loginBean.user).apellido}"/>
+                                    <p:menuitem icon="fas fa-check-circle icon" value="Cerrar Sesion" action="#{loginBean.logOut('/faces/public/verHorarios.xhtml')}" immediate="true"/>
+                                </p:submenu>
+                            </p:panelMenu>
                         </li>
                     </c:if>
 
@@ -52,15 +60,13 @@
                 </ul>
             </nav>
 
-            <p:messages id="messagesError" showDetail="true" closable="true">
-                <p:autoUpdate/>
-            </p:messages>
 
         </h:form>
     </header>
 
     <h:form class="formulario">
         <p:growl id="messages" showDetail="true"/>
+        #{calendarioBean.loadEvents()}
 
         <h:panelGrid columnClasses="value">
             <p:schedule id="schedule" value="#{calendarioBean.eventModel}" widgetVar="myschedule"
@@ -80,6 +86,10 @@
                     <p:ajax event="dateSelect" listener="#{calendarioBean.onDateSelect}" update="eventDetails"
                             oncomplete="PF('eventDialog').show();"/>
                 </c:if>
+
+                <p:ajax event="eventMove" listener="#{calendarioBean.onEventMove}" update="messages"/>
+
+                <p:ajax event="eventResize" listener="#{calendarioBean.onEventResize}" update="messages"/>
 
             </p:schedule>
         </h:panelGrid>
@@ -190,19 +200,15 @@
                         <f:selectItem itemLabel="19:00" itemValue="19:00"/>
                     </p:selectOneMenu>
 
-                    <p:outputLabel for="tipo" value="Recurrencia: "/>
-                    <p:selectOneMenu id="tipo" value="#{calendarioBean.tipoReserva}" style="width: 150px">
-                        <f:selectItem itemLabel="Recurrencia" itemValue=""/>
-                        <f:selectItem itemLabel="Mensual" itemValue="Mensual"/>
-                        <f:selectItem itemLabel="Semanal" itemValue="Semanal"/>
-                        <f:selectItem itemLabel="Diario" itemValue="Diario"/>
-                        <f:selectItem itemLabel="Una vez" itemValue="Una vez"/>
-                    </p:selectOneMenu>
-
                     <p:commandButton id="addButton" value="Reservar" action="#{calendarioBean.addEvent(loginBean.user)}"
                                      oncomplete="PF('myschedule').update();PF('eventDialog').hide);"/>
 
                 </h:panelGrid>
+
+                <p:messages id="messagesError" showDetail="true" closable="true">
+                    <p:autoUpdate/>
+                </p:messages>
+
             </p:dialog>
         </c:if>
 
@@ -211,13 +217,49 @@
 
                 <h:panelGrid id="eventDetails" columns="2">
 
-                    <p:outputLabel for="inicio" value="Fecha Inicio:"/>
-                    <p:calendar id="inicio" value="#{calendarioBean.getEvent().startDate}" pattern="dd/MM/yyyy HH:mm"/>
+                    <p:outputLabel value="Id: "/>
+                    <p:outputLabel value="#{calendarioBean.getRecursoactual().id}" required="true"/>
 
-                    <p:outputLabel for="fin" value="Fecha Fin:"/>
-                    <p:calendar id="fin" value="#{calendarioBean.getEvent().endDate}" pattern="dd/MM/yyyy HH:mm"/>
+                    <p:outputLabel value="Fecha Reserva:"/>
+                    <p:outputLabel value="#{calendarioBean.getFechaDiaSeleccionado()}"  required="true"/>
 
-                    <p:commandButton id="addButton" value="Reservar" action="#{calendarioBean.addEventAdmin(loginBean.user)}"
+                    <p:outputLabel for="inicio_fecha" value="Hora Inicio: "/>
+                    <p:selectOneMenu id="inicio_fecha" value="#{calendarioBean.selectedHourStart}" style="width: 150px">
+                        <f:selectItem itemLabel="Hora Inicio" itemValue=""/>
+                        <f:selectItem itemLabel="7:00" itemValue="7:00"/>
+                        <f:selectItem itemLabel="8:00" itemValue="8:00"/>
+                        <f:selectItem itemLabel="9:00" itemValue="9:00"/>
+                        <f:selectItem itemLabel="10:00" itemValue="10:00"/>
+                        <f:selectItem itemLabel="11:00" itemValue="11:00"/>
+                        <f:selectItem itemLabel="12:00" itemValue="12:00"/>
+                        <f:selectItem itemLabel="13:00" itemValue="13:00"/>
+                        <f:selectItem itemLabel="14:00" itemValue="14:00"/>
+                        <f:selectItem itemLabel="15:00" itemValue="15:00"/>
+                        <f:selectItem itemLabel="16:00" itemValue="16:00"/>
+                        <f:selectItem itemLabel="17:00" itemValue="17:00"/>
+                        <f:selectItem itemLabel="18:00" itemValue="18:00"/>
+                        <f:selectItem itemLabel="19:00" itemValue="19:00"/>
+                    </p:selectOneMenu>
+
+                    <p:outputLabel for="fin_fecha" value="Hora Fin: "/>
+                    <p:selectOneMenu id="fin_fecha" value="#{calendarioBean.selectedHourEnd}" style="width: 150px">
+                        <f:selectItem itemLabel="Hora Fin" itemValue=""/>
+                        <f:selectItem itemLabel="7:00" itemValue="7:00"/>
+                        <f:selectItem itemLabel="8:00" itemValue="8:00"/>
+                        <f:selectItem itemLabel="9:00" itemValue="9:00"/>
+                        <f:selectItem itemLabel="10:00" itemValue="10:00"/>
+                        <f:selectItem itemLabel="11:00" itemValue="11:00"/>
+                        <f:selectItem itemLabel="12:00" itemValue="12:00"/>
+                        <f:selectItem itemLabel="13:00" itemValue="13:00"/>
+                        <f:selectItem itemLabel="14:00" itemValue="14:00"/>
+                        <f:selectItem itemLabel="15:00" itemValue="15:00"/>
+                        <f:selectItem itemLabel="16:00" itemValue="16:00"/>
+                        <f:selectItem itemLabel="17:00" itemValue="17:00"/>
+                        <f:selectItem itemLabel="18:00" itemValue="18:00"/>
+                        <f:selectItem itemLabel="19:00" itemValue="19:00"/>
+                    </p:selectOneMenu>
+
+                    <p:commandButton id="addButton" value="Reservar" action="#{calendarioBean.addEvent(loginBean.user)}"
                                      oncomplete="PF('myschedule').update();PF('eventDialog').hide);"/>
 
                 </h:panelGrid>
