Historia Reportes Admin casi completa

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -60,7 +60,7 @@
                             <a href="/faces/admin/userReservas.xhtml" class="nav-menu-link nav-link" onclick="#{loginBean.setUltimaPagina('/faces/index.xhtml')}">Consultar Reservas</a>
                         </li>
                         <li class="nav-menu-item">
-                            <a href="#" class="nav-menu-link nav-link">Reporte</a>
+                            <a href="/faces/admin/reporte.xhtml" class="nav-menu-link nav-link">Reporte</a>
                         </li>
                         <li class="nav-menu_visible" >
                             <div>
