--- a/src/main/webapp/admin/reporte.xhtml
+++ b/src/main/webapp/admin/reporte.xhtml
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
     <link rel = "icon" href ="https://yt3.ggpht.com/ytc/AKedOLQQOBfPPzh-vTH-tz76NykBAc2aU9r4z4UkeJog=s900-c-k-c0x00ffffff-no-rj"/>
-    <link rel="stylesheet" href="style/reporte.css" />
+    <link rel="stylesheet" href="../style/reporte.css" />
 </h:head>
 <h:body>
     <header class="header">
