Correccion errores Final 2.0

--- a/src/main/webapp/admin/cambiarEstadoRecurso.xhtml
+++ b/src/main/webapp/admin/cambiarEstadoRecurso.xhtml
@@ -75,7 +75,7 @@
                 </p:selectOneMenu>
             </div>
 
-            <p:commandButton class="button" value="Cambiar Estado" actionListener="#{recursosBean.cambiarEstadoRecurso('/faces/public/recursoLibros.xhtml')}"/>
+            <p:commandButton class="button" value="Cambiar Estado" actionListener="#{recursosBean.cambiarEstadoRecurso('/faces/index.xhtml')}"/>
             <p:commandButton  class="buttonCancel" value="Cancelar" onclick="history.back()" />
         </div>
     </h:form>
