--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -16,7 +16,7 @@
             crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Oswald;family=Staatliches;display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="../style/horario.css" />
+    <link rel="stylesheet" href="../style/horarioF.css" />
 
 </h:head>
 <h:body >
